fix flicker on slideshow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -640,15 +640,9 @@ video {
   cursor: pointer;
 }
 
-/* Slider */
-
-.swiper {
-  width: 100%;
-  height: 100%;
-}
-
-.text-roboto-bold {
-  font-family: "Roboto-bold";
+.swiper__category__test {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
 }
 
 .fixed {
@@ -796,10 +790,6 @@ video {
   height: 2.25rem;
 }
 
-.h-full {
-  height: 100%;
-}
-
 .h-\[100\%\] {
   height: 100%;
 }
@@ -810,6 +800,10 @@ video {
 
 .h-20 {
   height: 5rem;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .h-\[35px\] {
@@ -828,44 +822,16 @@ video {
   height: 1.75rem;
 }
 
-.h-1 {
-  height: 0.25rem;
+.min-h-full {
+  min-height: 100%;
 }
 
 .min-h-\[9\.5rem\] {
   min-height: 9.5rem;
 }
 
-.min-h-full {
-  min-height: 100%;
-}
-
-.min-h-\[12rem\] {
-  min-height: 12rem;
-}
-
-.min-h-\[50rem\] {
-  min-height: 50rem;
-}
-
-.min-h-\[30\] {
-  min-height: 30;
-}
-
-.min-h-\[30rem\] {
-  min-height: 30rem;
-}
-
-.min-h-\[300px\] {
-  min-height: 300px;
-}
-
 .min-h-\[80px\] {
   min-height: 80px;
-}
-
-.min-h-\[24rem\] {
-  min-height: 24rem;
 }
 
 .w-full {
@@ -886,6 +852,10 @@ video {
 
 .w-9 {
   width: 2.25rem;
+}
+
+.w-auto {
+  width: auto;
 }
 
 .w-\[35px\] {
@@ -1018,9 +988,9 @@ video {
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }
 
-.bg-slate-200 {
+.bg-red-200 {
   --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
 }
 
 .object-cover {
@@ -1149,6 +1119,10 @@ video {
   color: rgb(220 38 38 / var(--tw-text-opacity));
 }
 
+.opacity-70 {
+  opacity: 0.7;
+}
+
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1184,7 +1158,8 @@ html {
   font-family: "Roboto";
 }
 
-.font-bold {
+.font-bold,
+.text-roboto-bold {
   font-family: "Roboto-bold";
 }
 
@@ -1309,26 +1284,6 @@ html {
     min-height: 96px;
   }
 
-  .sm\:min-h-\[24rem\] {
-    min-height: 24rem;
-  }
-
-  .sm\:min-h-\[20rem\] {
-    min-height: 20rem;
-  }
-
-  .sm\:min-h-\[18rem\] {
-    min-height: 18rem;
-  }
-
-  .sm\:min-h-\[17rem\] {
-    min-height: 17rem;
-  }
-
-  .sm\:min-h-\[16rem\] {
-    min-height: 16rem;
-  }
-
   .sm\:min-h-\[15rem\] {
     min-height: 15rem;
   }
@@ -1369,20 +1324,12 @@ html {
     height: 1.5rem;
   }
 
-  .md\:min-h-\[18rem\] {
-    min-height: 18rem;
-  }
-
-  .md\:min-h-\[20rem\] {
-    min-height: 20rem;
-  }
-
-  .md\:min-h-\[19rem\] {
-    min-height: 19rem;
-  }
-
   .md\:min-h-\[18\.5rem\] {
     min-height: 18.5rem;
+  }
+
+  .md\:min-h-\[18\.8rem\] {
+    min-height: 18.8rem;
   }
 
   .md\:w-auto {
