--- a/styles/input.css
+++ b/styles/input.css
@@ -6,7 +6,8 @@ html {
   font-family: "Roboto";
 }
 
-.font-bold {
+.font-bold,
+.text-roboto-bold {
   font-family: "Roboto-bold";
 }
 
@@ -82,42 +83,11 @@ html {
     @apply cursor-pointer z-10 flex;
   }
 
-  /* Slider */
-  .swiper {
-    width: 100%;
-    height: 100%;
-  }
-
-  .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-  }
-
-  .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-
   .swiper-button-next {
     @apply bg-gray-600;
   }
 
-  .text-roboto-bold {
-    font-family: "Roboto-bold";
+  .swiper__category__test {
+    @apply bg-red-200;
   }
 }
